--- a/css/custom.css
+++ b/css/custom.css
@@ -13,7 +13,7 @@ nav.menu-navigation-basic ul {
   width: 100%;
   height: 3em;
   position: fixed;
-  background-color: #000000;
+  background-color: #fdece6;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -30,7 +30,7 @@ nav.menu-navigation-basic ul li a {
 
   text-align: center;
   text-decoration: none;
-	color: #ffaeb9;
+	color: #ea7e83;
   margin-top: 0px;
   padding-top: 1em;
   font-size: 1.6em;
@@ -56,5 +56,5 @@ nav.menu-navigation-basic ul li a {
 }
 
 .menu-navigation-basic ul li a:hover {
-     color: silver;
+     color: #5c3239;
 }
