--- a/css/custom.css
+++ b/css/custom.css
@@ -7,17 +7,19 @@ html, body {
 
 
 nav.menu-navigation-basic ul {
-	list-style: none;
 	padding: 0;
   margin: 0;
   list-style: none;
   width: 100%;
   height: 3em;
+  z-index: 1;
   position: fixed;
   background-color: #fdece6;
   justify-content: center;
   align-items: center;
   display: flex;
+  border-top: solid 1em #f4dcdc;
+
 }
 
 nav.menu-navigation-basic ul li {
@@ -77,7 +79,7 @@ nav.menu-navigation-basic ul li a {
 
 
 .player {
-    width: 60%;
+    width: 50%;
     background-color: #ea7e83;
     color: #fdece6;
     padding: 2em;
@@ -90,11 +92,12 @@ nav.menu-navigation-basic ul li a {
 
 .list-music {
     height: 10em;
+    width: 54.8%;
     overflow-y: scroll;
     background-color: #fdece6;
 }
 
-#canvas {
+#canvasBarra {
     margin-top:10px;
     border-style: solid;
     border-color: #fdece6;
@@ -103,6 +106,17 @@ nav.menu-navigation-basic ul li a {
     padding:2px;
 }
 
-#canvas:hover {
+
+
+.titulo {
+  display: inline-block;
+  position: absolute;
+  padding-left: 5%;
+  font-size: 1.8em;
+
+}
+
+#canvasBarra:hover {
+
     cursor: pointer;
 }
