--- a/css/custom.css
+++ b/css/custom.css
@@ -80,7 +80,6 @@ nav.menu-navigation-basic ul li a {
 }
 
 .player {
-    width: 90%;
     background-color: #ea7e83;
     color: #C24E57;
     padding: 2em;
@@ -141,22 +140,17 @@ nav.menu-navigation-basic ul li a {
 }
 
 
-.style-2::-webkit-scrollbar-track
-{
+.scrollbar::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
 	background-color: #F5F5F5;
 }
 
-.style-2::-webkit-scrollbar
-{
+.scrollbar::-webkit-scrollbar {
 	width: 12px;
 	background-color: #F5F5F5;
 }
 
-.style-2::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
+.scrollbar::-webkit-scrollbar-thumb {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #C24E57;
 }
