--- a/fonts/font.css
+++ b/fonts/font.css
@@ -1,10 +1,10 @@
 @font-face {
-      font-family: "juice-itc";
-      src: url("juice-itc.TTF") format("truetype");
+      font-family: "romance-fatal";
+      src: url("romance-fatal.ttf") format("truetype");
       font-weight: normal;
       font-style: normal;
       }
 
 html, body, button {
-    font-family: "juice-itc";
+    font-family: "romance-fatal";
 }
