--- a/css/custom.css
+++ b/css/custom.css
@@ -437,3 +437,19 @@ progress::-webkit-progress-value {
         padding-bottom: 2em;
     }
 }
+
+  .voltar-ao-topo {
+      border: solid rgba(255,255,255, 0.7);
+      position: fixed;
+      bottom: 1em;
+      right: 1em;
+      color: rgba(255,255,255, 0.7);
+      padding: 1em;
+      display: none;
+      text-align: center;
+      padding: .1em .2em .1em .2em;
+    }
+
+  .voltar-ao-topo:hover {
+      background-color: rgba(0, 0, 0, 0.2);
+    }
